[workspace]

members = [
    "oo-bindgen",

    "generators/rust-oo-bindgen",
    "generators/c-oo-bindgen",
    "generators/dotnet-oo-bindgen",

    "tests/foo-schema",
    "tests/foo-ffi",
    "tests/foo-bindings",

    "example/dnp3",
    "example/dnp3-schema",
    "example/dnp3-ffi",
    "example/dnp3-bindings",
]
