[package]
name = "ci-script"
version = "0.5.0"
authors = ["Step Function I/O LLC <info@stepfunc.io>"]
edition = "2021"

[dependencies]
oo-bindgen = { path = "../oo-bindgen" }
c-oo-bindgen = { path = "../generators/c-oo-bindgen" }
dotnet-oo-bindgen = { path = "../generators/dotnet-oo-bindgen" }
java-oo-bindgen = { path = "../generators/java-oo-bindgen" }
clap = { version = "^4", features = ["derive"] }
pathdiff = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "^0.1"