[package]
name = "ci-script"
version = "0.5.1"
authors = ["Step Function I/O LLC <info@stepfunc.io>"]
edition = "2021"

[dependencies]
oo-bindgen = { path = "../oo-bindgen" }
clap = { version = "^4", features = ["derive"] }
pathdiff = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "^0.1"