[package]
name = "oo-bindgen"
version = "0.5.1"
authors = ["Step Function I/O LLC <info@stepfunc.io>"]
edition = "2021"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
dunce = "1.0"
thiserror = "1.0"
semver = "0.1"
regex = "1.3"
lazy_static = "1.4"
backtrace = "0.3"
heck = "0.3"
platforms = "2.0"
serde = {  version = "1.0", features = ["derive"] }
serde_json  = "1.0"
tracing = "0.1"