[package]
name = "oo-bindgen"
version = "0.6.0"
authors = ["Step Function I/O LLC <info@stepfunc.io>"]
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
dunce = "1.0.1"
thiserror = "1.0.20" # jni crate requires this patch version or better for some reason
semver = "1"
regex = "1"
lazy_static = "1.3"
backtrace = "0.3"
heck = "0.3"
platforms = "2"
serde = {  version = "1.0.126", features = ["derive"] }
serde_json  = "1"
tracing = "0.1"