[package]
name = "dnp3-bindings"
version = "0.1.0"
authors = ["Émile Grégoire <emile@automatak.com>"]
edition = "2018"

[dependencies]
dnp3-ffi = { path = "../dnp3-ffi" }
dnp3-schema = { path = "../dnp3-schema" }
oo-bindgen = { path = "../../oo-bindgen" }
c-oo-bindgen = { path = "../../generators/c-oo-bindgen" }
dotnet-oo-bindgen = { path = "../../generators/dotnet-oo-bindgen" }
