[package]
name = "dnp3-ffi"
version = "0.1.0"
authors = ["Émile Grégoire <emile@automatak.com>"]
edition = "2018"

[lib]
crate-type=["cdylib"]

[dependencies]
log = "0.4"
dnp3 = { path = "../dnp3" }
tokio = { git = "https://github.com/tokio-rs/tokio", rev = "138eef352671aadffca304d62c69cb2582e64f2a", version = "0.3", features = ["rt-threaded"] }

[build-dependencies]
dnp3-schema = { path = "../dnp3-schema" }
rust-oo-bindgen = { path = "../../generators/rust-oo-bindgen" }
