[package]
name = "foo-bindings"
version = "0.1.0"
authors = ["Émile Grégoire <emile@automatak.com>"]
edition = "2018"

[dependencies]
semver = "0.9"
foo-ffi = { path = "../foo-ffi" }
oo-bindgen = { path = "../../oo-bindgen" }
c-oo-bindgen = { path = "../../generators/c-oo-bindgen" }
dotnet-oo-bindgen = { path = "../../generators/dotnet-oo-bindgen" }
