[package]
name = "foo-ffi-java"
version = "0.5.1"
edition = "2018"
build = "build.rs"

[lib]
crate-type = ["cdylib"]

[dependencies]
jni = "0.19"
foo-ffi = { path = "../foo-ffi" }

[build-dependencies]
foo-schema = { path = "../foo-schema" }
java-oo-bindgen = { path = "../../generators/java-oo-bindgen" }
