[package]
name = "foo-ffi"
version = "0.1.0"
authors = ["Émile Grégoire <emile@stepfunc.io>"]
edition = "2018"

[lib]
crate-type = ["rlib", "staticlib", "cdylib"]

[dependencies]

[build-dependencies]
foo-schema = { path = "../foo-schema" }
rust-oo-bindgen = { path = "../../generators/rust-oo-bindgen" }
